--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
 
         <div class="mb-5" data-aos="fade-up" data-aos-delay="200">
           <iframe style="border:0; width: 100%; height: 400px;"
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21565.008266615765!2d19.02021453609223!3d47.49719814304075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4741dde20d604729%3A0xb17cc35926251fd0!2sDoubleShot%20l%20Bistro%20and%20Coffee%20l%20L%C3%A1nch%C3%ADd%20utca!5e0!3m2!1sen!2shu!4v1770841174656!5m2!1sen!2shu"
             frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div><!-- End Google Maps -->
 
@@ -1124,7 +1124,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Location</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>Budapest, Lánchíd u. 7-9, 1013</p>
                 </div>
               </div><!-- End Info Item -->
 
