updated assets and description

--- a/index.html
+++ b/index.html
@@ -107,18 +107,25 @@
 
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
 
-      <div class="container">
+      <div class="container min-vh-100 d-flex justify-content-center align-items-center">
         <div class="row">
-          <div class="col-lg-8 d-flex flex-column align-items-center align-items-lg-start">
-            <h2 data-aos="fade-up" data-aos-delay="100">Welcome to <span>Restaurantly</span></h2>
-            <p data-aos="fade-up" data-aos-delay="200">Delivering great food for more than 18 years!</p>
-            <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-12 text-center">
+            <h2 data-aos="fade-up" data-aos-delay="100">
+              Bistro <span>&</span> Coffee
+            </h2>
+
+            <p data-aos="fade-up" data-aos-delay="200">
+              The business bistro on the Buda side
+            </p>
+
+            <div class="d-flex justify-content-center mt-4" data-aos="fade-up" data-aos-delay="300">
               <a href="#menu" class="cta-btn">Our Menu</a>
               <a href="#book-a-table" class="cta-btn">Book a Table</a>
             </div>
           </div>
+
           <div class="col-lg-4 d-flex align-items-center justify-content-center mt-5 mt-lg-0">
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>
+            <!--<a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a>-->
           </div>
         </div>
       </div>
@@ -135,25 +142,21 @@
             <img src="assets/img/about.jpg" class="img-fluid about-img" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
-              </li>
-              <li><i class="bi bi-check2-all"></i> <span>Duis aute irure dolor in reprehenderit in voluptate
-                  velit.</span></li>
-              <li><i class="bi bi-check2-all"></i> <span>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                  aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla
-                  pariatur.</span></li>
-            </ul>
+            <h3>Modern, light Buda style next to the Chain Bridge</h3>
+
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+              Bistro and Coffee is located on Lánchíd Street, just steps from the Danube and
+              the Castle District — a calm and elegant setting in the heart of Budapest.
+            </p>
+
+            <p>
+              Bright interiors, natural materials, and thoughtful design create a space that
+              feels both refined and welcoming.
+            </p>
+
+            <p>
+              Perfect for business lunches, quiet meetings, or a relaxing break in a peaceful,
+              stylish urban atmosphere.
             </p>
           </div>
         </div>
@@ -168,40 +171,48 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>WHY US</h2>
-        <p>Why Choose Our Restaurant</p>
+        <p>Why Visit Bistro and Coffee</p>
       </div><!-- End Section Title -->
 
       <div class="container">
-
         <div class="row gy-4">
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card-item">
               <span>01</span>
-              <h4><a href="" class="stretched-link">Lorem Ipsum</a></h4>
-              <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+              <h4><a href="" class="stretched-link">Prime Location</a></h4>
+              <p>
+                Just steps from the Chain Bridge and the Danube — a peaceful setting
+                in one of Budapest’s most beautiful areas.
+              </p>
             </div>
           </div><!-- Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card-item">
               <span>02</span>
-              <h4><a href="" class="stretched-link">Repellat Nihil</a></h4>
-              <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para
-                dest</p>
+              <h4><a href="" class="stretched-link">Calm, Elegant Atmosphere</a></h4>
+              <p>
+                Bright interiors, natural materials, and thoughtful design create a
+                space that feels refined yet welcoming.
+              </p>
             </div>
           </div><!-- Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card-item">
               <span>03</span>
-              <h4><a href="" class="stretched-link">Ad ad velit qui</a></h4>
-              <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+              <h4><a href="" class="stretched-link">Perfect for Any Occasion</a></h4>
+              <p>
+                Ideal for business lunches, relaxed meetings, or simply enjoying a
+                quiet coffee in the city.
+              </p>
             </div>
           </div><!-- Card Item -->
 
         </div>
-
+      </div>
+      </div>
       </div>
 
     </section><!-- /Why Us Section -->
